# yieldex

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile-data-collector  Dockerfile-test  README.md  Roadmap_MVP.md  Yieldex_Roadmap.md  analyze.sh  docker-compose.yml  env.example  manifesto.md  pyproject.toml  requirements-data-collector.txt  requirements.txt  run_silo_search.py
.github/profile/: README.md
config/: default.yaml
scripts/: build-push.sh  build.sh  check_config.sh  data-collector-build-push.sh  deploy.sh  push.sh
services/analyzer/: .env.example  config.yaml  pyproject.toml
services/analyzer/src/analyzer/: __init__.py  analyzer.py  api.py  config.py
services/common/: README.md  pyproject.toml
services/common/src/yieldex_common/: __init__.py  config.py  db_operations.py  utils.py
services/common/src/yieldex_common/abi/: AaveV3Pool.json  ERC20-rhoMarket.json  Silo.json  UniswapV3Router.json
services/common/src/yieldex_common/contracts/: SmartAgent.sol
services/data_collector/: .env.example  Dockerfile  README.md  config.yaml  pyproject.toml  requirements-data-collector.txt
services/data_collector/src/yieldex_data_collector/: __init__.py  collector.py  config.py  extract_urls_from_api.py  link_pool_sites.py  pool_urls_mock_results.json
services/data_collector/src/yieldex_data_collector/tests/: conftest.py  test_collector.py  test_config.py  test_utils.py
services/data_collector/tests/: test_basic.py
services/onchain/: README.md  onchain_runner.sh  pyproject.toml
services/onchain/docker/: Dockerfile
services/onchain/src/yieldex_onchain/: __init__.py  apply_decorators.py  config.py  onchain_operator.py  protocol_decorators.py  protocol_fabric.py  run_silo_search.py
services/onchain/src/yieldex_onchain/constants/: __init__.py  fluid_addresses.py
services/onchain/src/yieldex_onchain/dsa/: __init__.py  dsa_connector.py  dsa_manager.py
services/onchain/tests/: test_basic.py
services/pool_link_updater/: pyproject.toml
services/pool_link_updater/src/pool_link_update/: create_demo_records.py  link_pool_sites.py  mapped_pools.json  selenium_basic_test.py  selenium_url_collector.py
services/yield_optimizer/: pyproject.toml
services/yield_optimizer/docker/: Dockerfile
services/yield_optimizer/src/yieldex_optimizer/: README.md  __init__.py  config.py  logger.py
services/yield_optimizer/tests/: __init__.py  test_config.py  test_logger.py
src/analytics/: analyzer.py
src/bot/: config.py  notifications.py  test_bot.py
src/common/: config.py  utils.py
src/common/abi/: ERC20.json  FluidLendingPool.json  SiloConfig.json  SiloFactory.json  YieldexOracle.json
src/common/contracts/: SmartAgentFactory.sol
src/data_collector/: collector.py  config.py
src/data_collector/tests/: conftest.py  test_collector.py  test_config.py  test_utils.py
src/onchain/: __init__.py  config.py  onchain_operator.py  operator.py  operator_agent.py  protocol_fabric.py  silo_demo.py  test_silo_direct.py  test_silo_factory.py
src/sql/migrations/: 01_create_apy_history.sql  02_create_pool_balances.sql
src/sql/stored_procedures/: 01_create_latest_apy_function.sql
src/yieldex/: __init__.py  analytics.py  config.py  data_collector.py  notifications.py  onchain.py  protocol_fabric.py  test_bot.py  utils.py
src/yieldex/abi/: AaveV3Pool.json  ERC20.json  YieldexOracle.json
src/yieldex/contracts /: YieldexOracle.sol
