[project]
name = "yieldex-monorepo-meta"
version = "0.1.0"
description = "Monorepo for Yieldex Python microservices"

requires-python = ">=3.11"

[tool.uv]
package = false 

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.0.272",
    "hatchling>=1.24"
]

[tool.uv.sources]
yieldex-common = { workspace = true }

[tool.uv.workspace]
members = ["services/*"]            
