[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yieldex-common"
version = "0.1.0"
description = "Common utilities for Yieldex platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "web3>=6.0.0",  # Добавляем web3, так как она используется
    "supabase>=2.0.0",  # Добавляем supabase, используется в db_operations
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yieldex_common"]

[tool.hatch.build]
only-packages = true

[tool.hatch.metadata]
allow-direct-references = true