[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yieldex-data-collector"
version = "0.1.0"
description = "DeFi data collection service for YieldX platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "supabase>=2.0.0",
    "httpx>=0.25.0",
    "requests>=2.32.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/yieldex_data_collector"]

[project.scripts]
data-collector = "yieldex_data_collector.collector:run_data_collection"

[tool.hatch.metadata]
allow-direct-references = true
