[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "yieldex-onchain"
version = "0.1.0"
description = "Blockchain interactions for Yieldex"
authors = [
    {name = "Yieldex Team", email = "info@yieldex.com"},
]
requires-python = ">=3.11"
dependencies = [
    "yieldex-common",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "eth-typing>=5.1.0",
    "eth-utils>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true
