[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "yieldex-onchain"
version = "0.1.0"
description = "Blockchain interactions for Yieldex"
authors = [
    {name = "Yieldex Team", email = "info@yieldex.com"},
]
requires-python = ">=3.11"
dependencies = [
    "yieldex-common",
    "yieldex-analyzer",
    "web3>=7.0.0",
    "eth-account>=0.13.0",
    "eth-typing>=5.1.0",
    "eth-utils>=5.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/yieldex_onchain"]
