[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yieldex-pool_link_updater"
version = "0.1.0"
description = "pool_link_update service for Yieldex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yieldex-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pool_link_updater"]

[tool.hatch.metadata]
allow-direct-references = true
