[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "hatchling.build"

[project]
name = "yieldex-optimizer"
version = "0.1.0"
description = "Yield optimization for Yieldex"
authors = [
    {name = "Yieldex Team", email = "info@yieldex.com"},
]
requires-python = ">=3.11"
dependencies = [
    "yieldex-common",
    "yieldex-onchain",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
yieldex-common = { workspace = true }
yieldex-onchain = { workspace = true }


[tool.hatch.metadata]
allow-direct-references = true